# fidolio

./: .gitignore  Makefile  Makefile.am  README.md  _all.sh  _build.sh  _configure.sh  _install.sh  _scan.sh  autotools.sh  build.sh  clean_and_build.sh  clean_configure.sh  clean_project.sh  configure.ac  fidolio.code-workspace  scan.sh
include/: author_box.hh  character.xpm  compile.xpm  date_picker.hh  defaultauthor.xpm  defaultcover.xpm  down-symbolic.xpm  editor.xpm  explore.xpm  explore_menu.ui  fidolio.xpm  fidolio_menu.ui  fidolio_tall.xpm  folder.xpm  genre_dropdown.hh  globals.hh  home.xpm  mainwindow.hh  open-menu.xpm  open-menu_menu.ui  outline.xpm  pause.xpm  people.xpm  play.xpm  plotline.xpm  pomodoro.ui  pomodoro.xpm  pomodoro_box.hh  pomodoro_drawingarea.hh  project.xpm  project_box.hh  question.xpm  reset.xpm  stop.xpm  summary.xpm  target_box.hh  target_progress_box.hh  target_progress_count_menu.ui  ticker.hh  timeline.xpm  (+5 more)
rsc/: fidolio.desktop  genres.txt
src/: author_box.cc  date_picker.cc  genre_dropdown.cc  globals.cc  main.cc  mainwindow.cc  pomodoro_box.cc  pomodoro_drawingarea.cc  project_box.cc  target_box.cc  target_progress_box.cc  utils.cc  week_togglebutton_box.cc
