#Regenerated Makefile.am from scan.sh

AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = fidolio

fidolio_CPPFLAGS = @GTK4_CFLAGS@ -I../include/ -std=c++20

fidolio_LDADD = @GTK4_LIBS@

fidolio_SOURCES = \
	src/author_box.cc \
	src/date_picker.cc \
	src/genre_dropdown.cc \
	src/globals.cc \
	src/main.cc \
	src/mainwindow.cc \
	src/pomodoro_box.cc \
	src/pomodoro_drawingarea.cc \
	src/project_box.cc \
	src/target_box.cc \
	src/target_progress_box.cc \
	src/utils.cc \
	src/week_togglebutton_box.cc \
	include/author_box.hh \
	include/character.xpm \
	include/compile.xpm \
	include/date_picker.hh \
	include/defaultauthor.xpm \
	include/defaultcover.xpm \
	include/down-symbolic.xpm \
	include/editor.xpm \
	include/explore_menu.ui \
	include/explore.xpm \
	include/fidolio_menu.ui \
	include/fidolio_tall.xpm \
	include/fidolio.xpm \
	include/folder.xpm \
	include/genre_dropdown.hh \
	include/globals.hh \
	include/home.xpm \
	include/mainwindow.hh \
	include/open-menu_menu.ui \
	include/open-menu.xpm \
	include/outline.xpm \
	include/people.xpm \
	include/pomodoro_box.hh \
	include/pomodoro_drawingarea.hh \
	include/pomodoro.ui \
	include/pomodoro.xpm \
	include/project_box.hh \
	include/question.xpm \
	include/reset.xpm \
	include/summary.xpm \
	include/target_box.hh \
	include/target_progress_box.hh \
	include/target_progress_count_menu.ui \
	include/ticker.hh \
	include/timeline.xpm \
	include/trash.xpm \
	include/utils.hh \
	include/week_togglebutton_box.hh \
	include/western.xpm \
	include/world.xpm
